# dora-lerobot

./: .gitattributes  .gitignore  Cargo.toml  README.md  dataflow.yml  initial_node.py  setup_ros2.sh
ak_lcr/: ASSEMBLING.md  CONFIGURING.md  INSTALLATION.md  dynamixel.py  lcr_auto_configure.py  rob_test.py
ak_lcr/graphs/: bi_teleop.yml  mono_teleop.yml
ak_lcr/nodes/: teleoperate.py  teleoperate_simu.py  webcam.py
alexk_lcr/: ASSEMBLING.md  CONFIGURING.md  INSTALLATION.md  README.md  RECORDING.md  dynamixel.py  lcr_auto_configure.py  lcr_configure.py  requirements.txt
alexk_lcr/graphs/: bi_teleop.yml  mono_teleop.yml  record_mono_teleop.yml
alexk_lcr/nodes/: interpolate_lcr_to_lcr.py
alexk_low_cost_robot/: ASSEMBLING.md  CONFIGURING.md  INSTALLATION.md  README.md  RECORDING.md  lcr_auto_configure.py  python.sh  requirements.txt  rob_test.py
alexk_low_cost_robot/dxl_api_alexk/: setup.py
alexk_low_cost_robot/example/: eval.yml  record_teleop.yml
alexk_low_cost_robot/feetech_api_rob/: setup.py
alexk_low_cost_robot/graphs/: bi_teleop.yml  keyboard.yml  record.yml  record_teleop.yml  record_teleop_unix.yml  record_teleop_windows.yml  simple_teleop.yml  simple_teleop_custom_env.yml  simple_teleop_unix.yml  simple_teleop_windows.yml  webcam.yml
alexk_low_cost_robot/lcr-auto-configure/: Cargo.toml
alexk_low_cost_robot/lcr-auto-configure/src/: main.rs
alexk_low_cost_robot/nodes/: arm_controller.py  keyboard.py  keyboard_node_basic.py  record.py  (+6 more)
common/: README.md  pyproject.toml
common/common/dynamixel_bus/: bus.py
common/common/feetech_bus/: bus.py
common/common/position_control/: configure.py  utils.py
config/: puppet_modes_left.yaml  puppet_modes_right.yaml
datasets/: build_dataset.py  requirements
dora-lerobot/: pyproject.toml
dora-lerobot/dora_lerobot/feetech_bus/: __init__.py
dora-lerobot/dora_lerobot/position_control/: utils.py
dora_lerobot/: pyproject.toml
dora_lerobot/dora_lerobot/dynamixel_bus/: bus.py
dora_lerobot/dora_lerobot/feetech_bus/: bus.py
dora_lerobot/dora_lerobot/position_control/: utils.py
dxl-xm-client/: Cargo.toml
koch/: README.md
koch/nodes/record/: Cargo.toml
koch/nodes/record/src/: main.rs
node-hub/: README.md  pyproject.toml
node-hub/dynamixel-client/: README.md  main.py  pyproject.toml
node-hub/feetech-client/: README.md  bus.py  main.py  pyproject.toml
node-hub/lebai-client/lebai_client/: main.py
node-hub/lerobot-dashboard/: README.md  main.py  pyproject.toml
node-hub/mujoco-client/: README.md  main.py  pyproject.toml
node-hub/opencv-camera/: main.py  pyproject.toml
node-hub/opencv-video-capture/: main.py  pyproject.toml
node-hub/replay-client/: main.py  pyproject.toml
node-hub/video-encoder/: main.py  pyproject.toml
node_hub/: README.md  pyproject.toml
node_hub/dynamixel-client/: pyproject.toml
node_hub/dynamixel_client/: README.md  client.py  dynamixel.py  requirements.txt
node_hub/feetech-client/: main.py  pyproject.toml
node_hub/feetech_client/: README.md  client.py  feetech.py  requirements.txt
node_hub/lerobot-dashboard/: pyproject.toml
node_hub/lerobot_record/: README.md  record.py  requirements.txt
node_hub/mujoco-client/: main.py  pyproject.toml
node_hub/mujoco_client/: README.md  client.py  requirements.txt
node_hub/opencv-camera/: main.py  pyproject.toml
node_hub/opencv_camera/: README.md  camera.py  requirements.txt
node_hub/pygame_interface/: README.md  interface.py  requirements.txt
node_hub/pygame_minimalistic_interface/: README.md  interface.py  requirements.txt
node_hub/record_orchestrator/: README.md  record.py  requirements.txt
node_hub/replay-client/: pyproject.toml
node_hub/replay_client/: README.md  client.py  requirements.txt
node_hub/video-encoder/: main.py  pyproject.toml
node_hub/video_encoder/: README.md  encoder.py  requirements.txt
reachy/: README.md  reachy_client.py  simple_replay.py
reachy1/: README.md  requirements.txt
robots/: README.md
robots/alexk-lcr/: CONFIGURING.md  INSTALLATION.md  README.md  RECORDING.md  bus.py  configure.py  pyproject.toml  requirements.txt  test.py
robots/alexk-lcr/configs/: follower.json  follower.left.control  follower.right.control  follower.startup  follower_control.json  follower_startup.json  leader.json  leader.left.control  leader.right.control  leader.startup  leader_control.json  simu_follower.json  simu_follower_startup.json
robots/alexk-lcr/configs/right/: follower.json  leader.json
robots/alexk-lcr/graphs/: bi_teleop_real.yml  mono_replay_real.yml  mono_teleop_real.yml  mono_teleop_real_and_simu.yml  mono_teleop_simu.yml  record_mono_teleop_real.yml
robots/alexk-lcr/nodes/: interpolate_lcr_to_lcr.py  interpolate_lcr_to_record.py  interpolate_lcr_to_simu_lcr.py  interpolate_replay_to_lcr.py
robots/alexk-lcr/nodes/position_control/: configure.py  utils.py
robots/alexk_lcr/: ASSEMBLING.md  CONFIGURING.md  INSTALLATION.md  README.md  RECORDING.md  configure.py  pyproject.toml  requirements.txt
robots/alexk_lcr/graphs/: bi_teleop.yml  bi_teleop_real.yml  mono_replay_real.yml  mono_teleop.yml  mono_teleop_real.yml  mono_teleop_real_and_simu.yml  mono_teleop_simu.yml  record_bi_teleop.yml  record_mono_teleop.yml  record_mono_teleop_real.yml  test.yml
robots/alexk_lcr/graphs/experimental/: record_mono_teleop.yml
robots/alexk_lcr/nodes/: interpolate_lcr_to_lcr.py  interpolate_lcr_to_simu_lcr.py
robots/so100/: ASSEMBLING.md  CONFIGURING.md  INSTALLATION.md  README.md  RECORDING.md  bus.py  configure.py  development.txt  pyproject.toml  requirements.txt  test.py
robots/so100/configs/: follower.left.control  follower.startup
robots/so100/graphs/: bi_teleop_frankenstein.yml  bi_teleop_with_ak_lcr.yml  mono_replay_real.yml  mono_teleop_real_and_simu_with_alexk_lcr.yml  mono_teleop_real_with_alexk_lcr.yml  mono_teleop_simu_with_alexk_lcr.yml  mono_teleop_with_ak_lcr.yml  mono_teleop_with_alexk_lcr.yml  record_mono_teleop_real_with_alexk_lcr.yml
robots/so100/nodes/: interpolate_lcr_to_so100.py  interpolate_replay_to_so100.py
tests/: test_realsense.py
(+99 files in other folders)
