[tool.poetry]
name = "common"
version = "0.1"
authors = ["Enzo Le Van <dev@enzo-le-van.fr>"]
description = "Common packages that contains useful functions / objects."
readme = "README.md"

packages = [
    { include = "common" }
]

[tool.poetry.dependencies]
numpy = "2.0.0"
pyarrow = "16.1.0"
dynamixel-sdk = "3.7.31"
feetech-servo-sdk = "1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"