[project]
name = "dora_lerobot"
version = "0.1"
description = "This is a temporary package that will be replaced by the official LeRobot package when it's ready."
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "numpy==2.0.0",
    "dynamixel-sdk==3.7.31",
    "feetech-servo-sdk==1.0.0"
]

[tool.poetry]
packages = [
    { include = "dora_lerobot" },
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

