[tool.poetry]
name = "node_hub"
version = "0.1"
authors = ["Hennzau <dev@enzo-le-van.fr>"]
description = "Dora LeRobot node hub"
readme = "README.md"

packages = [
    { include = "main.py", from = "dynamixel-client", to = "node_hub" },
]

[tool.poetry.dependencies]
dynamixel-client = { path = "dynamixel-client" }
feetech-client = { path = "feetech-client" }
mujoco-client = { path = "mujoco-client" }
replay-client = { path = "replay-client" }
lerobot-dashboard = { path = "lerobot-dashboard" }
opencv-video-capture = { path = "opencv-video-capture" }
video-encoder = { path = "video-encoder" }

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"