[tool.poetry]
name = "dynamixel-client"
version = "0.1"
authors = ["Hennzau <dev@enzo-le-van.fr>"]
description = "Dora Node client for dynamixel motors."
readme = "README.md"

packages = [
    { include = "main.py", to = "dynamixel_client" },
    { include = "bus.py", to = "dynamixel_client" },
]

[tool.poetry.dependencies]
dora-rs = "0.3.5"
dynamixel-sdk = "3.7.31"

[tool.poetry.scripts]
dynamixel-client = "dynamixel_client.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"