[tool.poetry]
name = "feetech-client"
version = "0.1"
authors = ["Hennzau <dev@enzo-le-van.fr>"]
description = "Dora Node client for feetech motors."
readme = "README.md"

packages = [
    { include = "main.py", to = "feetech_client" },
    { include = "bus.py", to = "feetech_client" },
]

[tool.poetry.dependencies]
dora-rs = "0.3.5"
feetech-servo-sdk = "1.0.0"

[tool.poetry.scripts]
feetech-client = "feetech_client.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"