[tool.poetry]
name = "opencv-camera"
version = "0.1"
authors = ["Hennzau <dev@enzo-le-van.fr>"]
description = "Dora Node for OpenCV Camera"
readme = "README.md"

packages = [
    { include = "main.py", to = "opencv_camera" }
]

[tool.poetry.dependencies]
python = "^3.11"
dora-rs = "0.3.5"
numpy = "2.0.0"
pyarrow = "16.1.0"
opencv-python = "4.10.0.84"

[tool.poetry.scripts]
opencv-camera = "opencv_camera.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"