[tool.poetry]
name = "replay-client"
version = "0.1"
authors = ["Hennzau <dev@enzo-le-van.fr>"]
description = "Dora Node client for replaying recorded data."
readme = "README.md"

packages = [
    { include = "main.py", to = "replay_client" }
]

[tool.poetry.dependencies]
python = "^3.11"
dora-rs = "0.3.5"
numpy = "2.0.0"
pyarrow = "16.1.0"
pandas = "2.2.2"

[tool.poetry.scripts]
replay-client = "replay_client.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"