[tool.poetry]
name = "dynamixel-client"
version = "0.1"
authors = ["Hennzau <dev@enzo-le-van.fr>"]
description = "Dora Node client for dynamixel motors."
readme = "README.md"

packages = [
    { include = "main.py" }
]

[tool.poetry.dependencies]
python = "^3.11"
dora-rs = "0.3.5"
numpy = "2.0.0"
pyarrow = "16.1.0"

dora_lerobot = { path = "../../dora-lerobot" }

[tool.poetry.scripts]
dynamixel-client = "main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"