[tool.poetry]
name = "lerobot-dashboard"
version = "0.1"
authors = ["Hennzau <dev@enzo-le-van.fr>"]
description = "Dora Node Dashboard for LeRobot dataset recording."
readme = "README.md"

packages = [
    { include = "main.py" }
]

[tool.poetry.dependencies]
python = "^3.11"
dora-rs = "0.3.5"
numpy = "2.0.0"
pyarrow = "16.1.0"
opencv-python = "4.10.0.84"
pygame = "2.6.0"

[tool.poetry.scripts]
lerobot-dashboard = "main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"