[tool.poetry]
name = "alexk-lcr"
version = "0.1"
authors = ["Hennzau <dev@enzo-le-van.fr>"]
description = "Dora LeRobot Alexander Koch's LCR arm."
readme = "README.md"

packages = [
    { include = "interpolate_lcr_to_lcr.py", from = "nodes", to = "alexk_lcr" },
]

[tool.poetry.dependencies]
dynamixel-client = { path = "../../node_hub/dynamixel-client" }
mujoco-client = { path = "../../node_hub/mujoco-client" }
replay-client = { path = "../../node_hub/replay-client" }
lerobot-dashboard = { path = "../../node_hub/lerobot-dashboard" }
opencv-video-capture = { path = "../../node_hub/opencv-video-capture" }
video-encoder = { path = "../../node_hub/video-encoder" }

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"