[package]
name = "record"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-node-api = "0.3.4"
serialport = "4.2.0"
rustypot = { git = "https://github.com/haixuanTao/rustypot", branch = "angular-conversion" }
eyre = "0.6.12"